[package]
name = "counter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
redis = { version = "0.23.0", features = ["tls-native-tls"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"